k8s/overlays/shokohsc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flame
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    flame.pawelmalak/name: dev-flame
    flame.pawelmalak/url: flame.dev.shokohsc.home
    flame.pawelmalak/type: app
    flame.pawelmalak/icon: wrench
spec:
  rules:
  - host: flame.dev.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flame
            port:
              number: 80
  tls:
  - hosts:
    - flame.dev.shokohsc.home
    secretName: flame-cert
